2011-05-19  Kenichi Ishibashi  <bashi@chromium.org>

Reviewed by Kent Tamura.

        [Chromium] IME candidate window appears wrong position in an iframe
        https://bugs.webkit.org/show_bug.cgi?id=61023

        Added a test which ensures the IME candidate position is located
        at suitable position.

        * platform/chromium-mac/editing/input/ime-candidate-window-position-expected.txt: Added.
        * platform/chromium-mac/editing/input/ime-candidate-window-position.html: Added.
        * platform/chromium-mac/editing/resources/ime-candidate-window-position-iframe.html: Added.
2011-05-19  Kenichi Ishibashi  <bashi@chromium.org>

        Reviewed by Kent Tamura.

        [Chromium] IME candidate window appears wrong position in an iframe
        https://bugs.webkit.org/show_bug.cgi?id=61023

        Always adjusts the range to window relative coordinates.

        * src/WebFrameImpl.cpp:
        (WebKit::WebFrameImpl::firstRectForCharacterRange): Removed condition
        which excludes editable selectionRoot from adjusting.
2011-05-19  Kenichi Ishibashi  <bashi@chromium.org>

        Reviewed by Kent Tamura.

        [Chromium] IME candidate window appears wrong position in an iframe
        https://bugs.webkit.org/show_bug.cgi?id=61023

        Call the focused frame's firstRectForCharacterRange() instead of the
        main frame so that DRT behaves as the same as Chromium.

        * DumpRenderTree/chromium/TextInputController.cpp:
        (TextInputController::firstRectForCharacterRange):

Canonical link: https://commits.webkit.org/76470@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@86828 268f45cc-cd09-0410-ab3c-d52691b4dbfc